[project]
name = "graph-theory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.3",
    "networkx>=3.6.1",
]

[project.scripts]
extract-routes = "graph_theory.extract_overture_data:extract_routes"
extract-connectors = "graph_theory.extract_overture_data:extract_connectors"
extract-buildings = "graph_theory.extract_overture_data:extract_buildings"
extract-building-centroids = "graph_theory.extract_overture_data:extract_building_centroids"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
