[project]
name = "graph-theory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.3",
    "geopandas>=1.0.0",
    "networkx>=3.6.1",
    "pyarrow>=20.0.0",
]

[project.scripts]
extract-routes = "graph_theory.extract_overture_data:extract_routes"
extract-connectors = "graph_theory.extract_overture_data:extract_connectors"
extract-buildings = "graph_theory.extract_overture_data:extract_buildings"
extract-building-centroids = "graph_theory.extract_overture_data:extract_building_centroids"
building-to-connector = "graph_theory.extract_overture_data:building_centroid_to_nearest_connector"
prepare-rust-graph = "graph_theory.extract_overture_data:prepare_rust_graph"
cluster-buildings = "graph_theory.cluster_buildings:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pandas>=3.0.3",
    "pytest>=9.1.1",
]
